# billing-app

./: .gitignore  Application.hs  Calendar.hs  Foundation.hs  Import.hs  LICENSE.md  Model.hs  Worksheet.hs  billing-app.cabal
Calendar/: Events.hs
Calendar/Events/: List.hs
Form/: InvoiceProfile.hs
Form/Field/: CaseInsensitive.hs  Currency.hs  SearchTerms.hs
GoogleAPI/: Auth.hs
Handler/: GoogleTest.hs  InvoiceLayout.hs
Handler/InvoiceProfile/: Create.hs  InvoiceProfiles.hs  View.hs
Import/: NoFoundation.hs  Utilities.hs
Import/AgdaUtils/: Either.hs
Model/: CalendarEvents.hs  Currency.hs  InvoiceProfile.hs
Model/Invoice/: Profile.hs
Model/PersistField/: CaseInsensitive.hs  Currency.hs  TimeZone.hs
Model/PersistHelpers/: CalendarEvents.hs
Model/Persistent/Field/: CaseInsensitive.hs  Currency.hs
app/: devel.hs
config/: keter.yml  models  routes  settings.yml  test-settings.yml
docs/: Time.md
docs/brainstorm/: Brainstorm.md  Calendar.md  HourConflict.md  UsingTheWebsiteToAddCalendarEvents.md
docs/todo/: AccessToken.md  FixCalendarEvents.md  OAuth.md  WatchingForUpdates.md
profiling/: commonTerms.hs
templates/: default-layout-wrapper.hamlet  default-layout.lucius  home.hamlet
templates/invoice-profile/: invoice-profiles.hamlet  view.hamlet
test/: TestImport.hs
